Fixed Headshots Sizing
Player Images were too big, now it is fixed to look normal on page

--- a/frontend/src/Pages/Scores/Basketball/stats.css
+++ b/frontend/src/Pages/Scores/Basketball/stats.css
@@ -3,10 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
 
 
-.PlayerImage {
-    max-height: auto;
-    width: auto;
-  }
 
 
 .PlayerStats {
